# renderer

./: Cargo.toml  README.md  bunny.json  bunnyetc.json  convertmonkey.py  input.json  make_bunny_scene.py  make_dragon_scene.py  monkeyverts.json  teapotverts.json  todo.md  todo.txt
scenes/: bunnyetc.json  make_bunnyetc_scene.py  monkey.json  scene_from_blend.py  spongeinside.json  spongeoutside.json
scenes/bunnyetc/: bunnyetc.json
scenes/cornell/: cornell.blend  cornell.json
scenes/dragon/: dragon.json
scenes/emissiontest/: emissiontest.blend  emissiontest.json
scenes/emissiontest2/: emissiontest2.blend  emissiontest2.json
scenes/sponge/: sponge.json
src/: io.rs  main.rs  objects.rs  path_trace.rs  scene.rs  structures.rs
