[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
clap = "4.4.11"
glam = "0.25.0"
png = "0.17.10"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
